--- a/_research/2020-07-07-test.md
+++ b/_research/2020-07-07-test.md
@@ -3,7 +3,7 @@ layout: post
 title: "Testitr"
 excerpt: "bliblou"
 image:
-  feature: research/test.png
+  feature: image/research/test.png
 modified:
 categories:
 date: 2020-07-07T11:00:00+01:00
